k8s/redis-commander/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-service
  namespace: websocket-example
spec:
  selector:
    app: redis-commander
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
